[project]
name = "tian-jiang-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bilibili-api-dev>=16.2.0b1",
    "bilibili-api-python>=17.2.0",
    "dotenv>=0.9.9",
    "polars>=1.30.0",
    "pydantic>=2.11.5",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
